[package]
name = "rockusb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
crc = "3.0.1"
fastrand = "1.9.0"
num_enum = "0.5.9"
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1.0.69"
bmap-parser = "0.1.0"
clap = { version = "4.1.4", features = ["derive"] }
flate2 = "1.0.25"
nbd = "0.2.3"
rusb = "0.9.1"
