[package]
name = "rockfile"
version = "0.1.0"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Rockchip specific file parsers"
homepage = "https://github.com/collabora/rockchiprs"
repository = "https://github.com/collabora/rockchiprs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
