[package]
name = "rockusb"
version = "0.1.2"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Rockchip usb protocol host implementation"
homepage = "https://github.com/collabora/rockchiprs"
repository = "https://github.com/collabora/rockchiprs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["libusb"]
libusb = ["dep:rusb"]

[dependencies]
bytes = "1.4.0"
crc = "3.0.1"
fastrand = "1.9.0"
num_enum = "0.5.9"
thiserror = "1.0.38"
rusb = { version = "0.9.1", optional = true }

[dev-dependencies]
anyhow = "1.0.69"
bmap-parser = "0.1.0"
clap = { version = "=4.2", features = ["derive"] }
clap-num = "1.0"
flate2 = "1.0.25"
nbd = "0.2.3"
rockfile = { path = "../rockfile", version = "0.1.1" }
rusb = "0.9.1"

[[example]]
name="rockusb"
required-features = ["libusb"]
