[package]
name = "rockusb"
version = "0.4.0"
edition = "2024"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Rockchip usb protocol host implementation"
homepage = "https://github.com/collabora/rockchiprs"
repository = "https://github.com/collabora/rockchiprs"
readme = "README.md"
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
libusb = ["dep:rusb"]
nusb = ["dep:nusb", "async"]
async = ["dep:futures"]

[dependencies]
bytes = "1.4.0"
crc = "3.0.1"
fastrand = "2"
num_enum = "0.7"
thiserror = "2.0.7"
rusb = { version = "0.9.4", optional = true }
nusb = { version = "0.2.1", optional = true }
futures = { version = "0.3.31", optional = true }
maybe-async-cfg = "0.2.5"

[dev-dependencies]
anyhow = "1.0.69"
bmap-parser = "0.2.0"
clap = { version = "4.2", features = ["derive"] }
clap-num = "1.0"
flate2 = "1.0.25"
rockfile = { path = "../rockfile", version = "0.1.2" }
rusb = "0.9.1"
tokio = { version = "1.40.0", features = ["full"] }
futures = { version = "0.3.31", features = ["compat", "io-compat"]}
tokio-util = { version = "0.7.12", features = ["compat"] }
async-compression = { version = "0.4.5", features = ["gzip", "futures-io"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name="rockusb"
required-features = ["nusb"]

[[example]]
name="rockusb-libusb"
required-features = ["libusb"]
